Styling for print links

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -81,6 +81,16 @@
 		}
 	}
 
+	.print_pdf {
+
+		a {
+
+			&:before {
+				content: @fa-var-file-pdf-o;
+			}
+		}
+	}
+
 	.flag-os2intra-flag-node-like {
 
 		.flag {
