--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full.less
@@ -35,7 +35,12 @@
 		margin-bottom: 20px;
 	}
 
-	.os2-node-full-body-action-buttons {}
+	.os2-node-full-controlpanel {
+
+		.os2-links {
+			text-align: right;
+		}
+	}
 }
 
 // --------------------------------------------------
