Node basket in links

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -51,12 +51,22 @@
 		}
 	}
 
-	.number-of-files {
+	.number_of_files {
 
 		a {
 
 			&:before {
 				content: @fa-var-cloud-download;
+			}
+		}
+	}
+
+	.add_to_basket {
+
+		a {
+
+			&:before {
+				content: @fa-var-shopping-basket;
 			}
 		}
 	}
