Make number_of_files appear as span

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -55,6 +55,13 @@
 
 		a {
 
+			&,
+			&:hover,
+			&:focus {
+				color: @os2-links-text-color;
+				text-decoration: none;
+			}
+
 			&:before {
 				content: @fa-var-cloud-download;
 			}
