Make number_of_files icon not change color

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -60,6 +60,10 @@
 			&:focus {
 				color: @os2-links-text-color;
 				text-decoration: none;
+
+				&:before {
+					color: @os2-links-icon-color;
+				}
 			}
 
 			&:before {
