Tilmeld gruppe og opret links

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -272,3 +272,20 @@
 
 // Links mixin
 .os2-mixin-links() {}
+
+.pane-node-create-links {
+  ul {
+    .list-inline;
+    a {
+      .btn;
+      .btn-tertiary;
+      .btn-sm;
+      margin-bottom: 4px;
+      &:before {
+        font-family: FontAwesome;
+        content: @fa-var-plus;
+        margin-right: 4px;
+        }
+    }
+  }
+}
