--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -273,6 +273,9 @@
 // Links mixin
 .os2-mixin-links() {}
 
+
+// Grupe links
+
 .pane-node-create-links {
   ul {
     .list-inline;
@@ -287,5 +290,17 @@
         margin-right: 4px;
         }
     }
+  }
+}
+
+a.group {
+  .btn;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  &.subscribe {
+    .btn-tertiary;
+    }
+  &.unsubscribe {
+  .btn-quaternary;
   }
 }
