Re-added telefonbogen

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/wrapper.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/wrapper.less
@@ -89,6 +89,11 @@
 
     // Inner wrapper
     .inner-wrapper {
+
+        .container {
+            margin-left: ((@grid-gutter-width / 2) + 36px);
+            margin-right: ((@grid-gutter-width / 2) + 36px * 2);
+        }
     }
 }
 
@@ -110,6 +115,11 @@
 
     // Inner wrapper
     .inner-wrapper {
+
+        .container {
+            margin-left: ((@grid-gutter-width / 2) + 36px);
+            margin-right: ((@grid-gutter-width / 2) + 36px * 2);
+        }
     }
 }
 
