Remove fixed height on fieldset.collapsed

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
@@ -10,7 +10,6 @@
 // Variables
 // --------------------------------------------------
 
-
 @os2-box-background-color: 	#fff;
 @os2-box-border-radius: 	 	@border-radius-base;
 
@@ -56,6 +55,8 @@
 		+ .os2-box-footer {
 			padding-top: 0;
 		}
+
+		&:extend(.clearfix all);
 	}
 
 	.os2-box-footer {
