Related links and category layout

--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bootstrap.less
@@ -145,7 +145,7 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              @brand-primary;
-@btn-default-bg:                 #d9d9d9;
+@btn-default-bg:                 #eeeff4;
 @btn-default-border:             @btn-default-bg;
 
 @btn-primary-color:              #fff;
