Node edit tabs rettet lidt

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
@@ -59,6 +59,28 @@
 			  padding: @padding-xs-vertical @padding-xs-horizontal;
 		  }
 	  }
+	  .os2-box {
+  	  background-color: transparent;
+  	  
+  	  .field-group-htabs-wrapper {
+    	  background-color: #FFF;
+  	  }
+  	  
+  	  .vertical-tabs-panes.tab-content {
+    	  background-color: #FFF;
+  	  }
+  	  .tabs-left > .nav-tabs > .active > a, .tabs-left > .nav-tabs > .active > a:hover, .tabs-left > .nav-tabs > .active > a:focus {
+    	  background-color: #FFF;
+  	  }
+  	  
+  	  .horizontal-tabs-panes {
+      	fieldset.panel {
+      	  &.form-wrapper {
+        	  margin-bottom: 0;
+      	  }
+    	  }  
+  	  }
+    }
   }
 }
 
