Address on terms

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/place.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/place.less
@@ -17,10 +17,13 @@
 // Place
 .os2-place {
 
-	// Name
-	.os2-place-name {
-		font-weight: @font-weight-bold;
+	// Google map
+	.os2-place-google-map {
+		margin-bottom: 5px;
 	}
+
+	// Name
+	.os2-place-name {}
 
 	// City
 	.os2-place-city {}
