--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/taxonomy-term/teaser/teaser.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/taxonomy-term/teaser/teaser.less
@@ -65,6 +65,15 @@
             margin: 0;
         }
     }
+
+    // Full width image
+    .os2-taxonomy-term-teaser-full-width-image {
+        .os2-full-width-image;
+
+        margin-top: (0 - @os2-box-body-top-bottom-spacing);
+        margin-left: (0 - @os2-taxonomy-term-teaser-inner-left-right-spacing);
+        margin-right: (0 - @os2-taxonomy-term-teaser-inner-left-right-spacing);
+    }
 }
 
 // --------------------------------------------------
