Self service links setup

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links-list.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links-list.less
@@ -1,31 +1,31 @@
 // |--------------------------------------------------------------------------
-// | Related links
+// | Links list
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .os2-related-links
+// | - .os2-links-list
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
-@os2-related-links-border-color: @border-color;
-@os2-related-links-top-bottom-spacing: 6px;
+@os2-links-list-border-color: @border-color;
+@os2-links-list-top-bottom-spacing: 6px;
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
-// Related links
-.os2-related-links {
+// Links list
+.os2-links-list {
 	padding: 0;
 	margin: 0;
 	list-style: none;
 
 	li {
-		padding: @os2-related-links-top-bottom-spacing 0;
-		border-bottom: 1px solid @os2-related-links-border-color;
+		padding: @os2-links-list-top-bottom-spacing 0;
+		border-bottom: 1px solid @os2-links-list-border-color;
 
 		a {
 			font-weight: @font-weight-bold;
@@ -44,83 +44,83 @@
 // Mobile
 @media @media-query-mobile {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // Print
 @media print {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // Touch
 .touch {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // No touch
 .no-touch {
 
-	// Related links
-	.os2-related-links {}
+	// Links list
+	.os2-links-list {}
 }
 
 // --------------------------------------------------
 // Mixins
 // --------------------------------------------------
 
-// Related links mixin
-.os2-mixin-related-links() {}
+// Links list mixin
+.os2-mixin-links-list() {}
