--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/list/list.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/list/list.less
@@ -59,6 +59,16 @@
 	}
 }
 
+.field-item {
+
+	&:last-child {
+
+		.os2-node-list {
+			border-bottom: 0;
+		}
+	}
+}
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
