Gruppe og afdelingssder opdateret

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -133,9 +133,30 @@
 		}
 	}
 
-	.flag-os2intra-flag-node-follow {
+	.flag-os2intra-flag-node-follow  {
 
 		.flag {
+
+			&.flag-action {
+
+				&:before {
+					content: @fa-var-star;
+				}
+			}
+
+			&.unflag-action {
+
+				&:before {
+					content: @fa-var-star-o;
+				}
+			}
+		}
+	}
+	
+	.subscribeflag  {
+
+		.flag {
+  		.btn;
 
 			&.flag-action {
 
