--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full.less
@@ -132,8 +132,14 @@
 .os2-mixin-node-full() {}
 
 // Dato visning
-.os2-node-full-body .date-display-single .date-display-range { display: inline; }
+.os2-node-full-body .date-display-single .date-display-range { 
+  display: inline; }
 
 .os2-node-full-body .views-bootstrap-accordion-plugin-style {
 	margin: 10px 0;
+}
+
+.pane-node-create-links {
+  h2.pane-title { 
+    margin-top: 0;}
 }
