Add calendar icon to events too

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/content-type-icon.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/content-type-icon.less
@@ -94,6 +94,14 @@
 	.content-type-icon-mixin(@fa-var-eye);
 }
 
+// Event (event) (begivenhed)
+.node--event--teaser,
+.node--event--list,
+.node-type-event {
+
+	.content-type-icon-mixin(@fa-var-calendar);
+}
+
 // --------------------------------------------------
 // Responsive
 // --------------------------------------------------
