Add square icon for selfservice links

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/content-type-icon.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/content-type-icon.less
@@ -87,11 +87,11 @@
 }
 
 // Selfservice link (os2web_base_selfservice_link) (selvbetjeningslinks)
-.node--spotbox--teaser,
-.node--spotbox--list,
-.node-type-spotbox {
+.node--os2web_base_selfservice_link--teaser,
+.node--os2web_base_selfservice_link--list,
+.node-type-os2web_base_selfservice_link {
 
-	.content-type-icon-mixin(@fa-var-eye);
+	.content-type-icon-mixin(@fa-var-check-square-o);
 }
 
 // Event (event) (begivenhed)
