--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/organisation-tree.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/organisation-tree.less
@@ -17,6 +17,17 @@
 // Organisation tree
 .os2-organisation-tree {
 
+	.view-content {
+
+		> ul {
+			list-style: none;
+			padding: 0;
+
+			> li {
+
+			}
+		}
+	}
 }
 
 // --------------------------------------------------
