Include users from the correct groups in organisation tree

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/user/teaser/teaser.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/user/teaser/teaser.less
@@ -1,9 +1,9 @@
 // |--------------------------------------------------------------------------
-// | Organisation tree
+// | Teaser
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .os2-organisation-tree
+// | - .os2-user-teaser
 // |
 
 // --------------------------------------------------
@@ -14,27 +14,8 @@
 // Styling
 // --------------------------------------------------
 
-// Organisation tree
-.os2-organisation-tree {
-
-	.view-content {
-
-		> ul {
-			list-style: none;
-			padding: 0;
-
-			> li {
-
-				&:last-child {
-
-					.os2-node-includeable {
-						border-bottom: 0;
-					}
-				}
-			}
-		}
-	}
-}
+// Teaser
+.os2-user-teaser {}
 
 // --------------------------------------------------
 // Responsive
@@ -43,83 +24,83 @@
 // Mobile
 @media @media-query-mobile {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // Print
 @media print {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // Touch
 .touch {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // No touch
 .no-touch {
 
-	// Organisation tree
-	.os2-organisation-tree {}
+	// Teaser
+	.os2-user-teaser {}
 }
 
 // --------------------------------------------------
 // Mixins
 // --------------------------------------------------
 
-// Organisation tree mixin
-.os2-mixin-organisation-tree() {}
+// Teaser mixin
+.os2-user-mixin-teaser() {}
