--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/includeable/includeable.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/includeable/includeable.less
@@ -27,6 +27,8 @@
 	border-bottom: 1px solid @os2-node-includeable-border-color;
 
 	.os2-node-includeable-heading {
+		position: relative;
+		display: block;
 		padding: @os2-node-includeable-heading-top-bottom-spacing @os2-node-includeable-heading-left-right-spacing;
 
 		.os2-node-includeable-heading-title {
