Brugerside interesser og kompetencer

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
@@ -5,3 +5,22 @@ html.js {
 		height: auto;
 	}
 }
+
+
+.view-os2intra-brugervisning {
+  span.competences {
+    .btn-group;
+    a {
+      .btn-tertiary;
+      margin-right: 10px;
+    }
+    
+  }
+  span.interests {
+    .btn-group;
+    a {
+      .btn-quaternary;
+      margin-right: 10px;
+  }
+}
+}
