Kompetencer og  interesser

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
@@ -8,19 +8,27 @@ html.js {
 
 
 .view-os2intra-brugervisning {
+  .contact {
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
   span.competences {
     .btn-group;
     a {
-      .btn-tertiary;
-      margin-right: 10px;
+      .btn-secondary;
+      .btn;
+			.btn-xs;
+      margin-right: 5px;
     }
     
   }
   span.interests {
     .btn-group;
     a {
-      .btn-quaternary;
-      margin-right: 10px;
+      .btn-tertiary;
+      .btn;
+			.btn-xs;
+      margin-right: 5px;
+      }
   }
-}
 }
