--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
@@ -8,6 +8,12 @@ html.js {
 
 
 .view-os2intra-brugervisning {
+  .profilbillede {
+    max-width: 200px;
+    height: auto;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
   .contact {
     margin-bottom: 10px;
     margin-top: 10px;
