--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
@@ -14,6 +14,7 @@ html.js {
     margin-right: 10px;
     margin-bottom: 10px;
   }
+  h2 { margin-top: 10px;}
   .contact {
     margin-bottom: 10px;
     margin-top: 10px;
