Clear på Bio så den kommer i ny linie når der er billede

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
@@ -18,6 +18,7 @@ html.js {
     margin-top: 10px;
     padding-top: 10px;
     border-top: 1px solid #ddd;
+    clear: both;
   }
   h2 { margin-top: 10px;}
   .contact {
