--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/loader.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/loader.less
@@ -1,5 +1,6 @@
 @import "wrapper";
 @import "main-navigation";
+@import "sidebar";
 @import "buttons";
 @import "breadcrumb";
 @import "content-type-icon";
