181 - organisation toggle - level 1 open

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/organisation-tree.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/organisation-tree.less
@@ -23,6 +23,27 @@
 
 	.view-content {
 
+		> ul {
+
+			> .os2-toggler-element {
+
+				&,
+				&.active {
+
+					> ul {
+						display: block;
+					}
+				}
+
+				> .views-field {
+
+					.os2-toggler-element-toggle {
+						display: none;
+					}
+				}
+			}
+		}
+
 		ul {
 			list-style: none;
 			padding: 0;
