181 - organisation toggle - level 1 open

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/organisation-tree.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/organisation-tree.less
@@ -40,6 +40,10 @@
 					.os2-toggler-element-toggle {
 						display: none;
 					}
+
+					.os2-toggler-element-content {
+						display: block;
+					}
 				}
 			}
 		}
