296/297 - menu icons - hardcoded

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser.less
@@ -54,6 +54,7 @@
 
     // Body
     .os2-node-teaser-body {
+        overflow: hidden;
         padding: @os2-node-teaser-inner-body-top-bottom-spacing @os2-node-teaser-inner-left-right-spacing;
         padding-bottom: 0;
 
