--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
@@ -6,6 +6,12 @@ html.js {
 	}
 }
 
+audio,
+canvas,
+progress,
+video {
+  max-width: 100%;
+}
 
 .view-os2intra-brugervisning {
   .profilbillede {
