--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/user/teaser/teaser.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/user/teaser/teaser.less
@@ -15,7 +15,23 @@
 // --------------------------------------------------
 
 // Teaser
-.os2-user-teaser {}
+.os2-user-teaser {
+
+	.table-cell {
+
+		&.os2-user-teaser-image {
+			width: 70px;
+		}
+
+		&.os2-user-teaser-information {
+			vertical-align: middle;
+
+			a {
+				font-weight: @font-weight-bold;
+			}
+		}
+	}
+}
 
 // --------------------------------------------------
 // Responsive
