--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/user/teaser/teaser.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/user/teaser/teaser.less
@@ -26,8 +26,11 @@
 		&.os2-user-teaser-information {
 			vertical-align: middle;
 
-			a {
-				font-weight: @font-weight-bold;
+			.os2-user-teaser-full-name {
+				
+				a {
+					font-weight: @font-weight-bold;
+				}
 			}
 		}
 	}
