Added margin to intro and body text

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full.less
@@ -29,7 +29,15 @@
 		color: @brand-secondary;
 		.heading-h5;
 		font-weight: @headings-font-weight-bold;
+                margin: 20px 0px;
+
 	}
+        .os2-node-full-body {
+          .field-name-body {
+            margin-bottom: 20px;;
+          }
+        }
+
 
 	.os2-node-full-controlpanel {
 
