--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser.less
@@ -23,6 +23,7 @@
 
 // Teaser
 .os2-node-teaser {
+    overflow: hidden;
     padding: @os2-node-teaser-inner-top-bottom-spacing 0;
 
     .os2-node-teaser-info {
@@ -38,6 +39,10 @@
             .heading-h4;
             margin: 0;
         }
+    }
+
+    img {
+        max-width: 100%;
     }
 
     .table {
