Added print style

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/sidebar.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/sidebar.less
@@ -21,6 +21,9 @@
 
 // Sidebar
 .sidebar {
+  @media print {
+    display: none;
+  }
 
   .sidebar-inner-wrapper {
     min-height: 100%;
@@ -288,7 +291,10 @@
 @media print {
 
   // Sidebar
-  .sidebar {}
+  .sidebar {
+    display: none;
+    visibility: hidden;
+  }
 }
 
 // Touch
