--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full-base-page.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full-base-page.less
@@ -88,9 +88,12 @@
 
 // Print
 @media print {
-
 	// Base page
-	.os2-node-full {}
+	.os2-node-full {
+          .panel-collapse {
+            display: block;
+          }
+        }
 }
 
 // Touch
