Image max-width 100% sitewide

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/loader.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/loader.less
@@ -1,6 +1,7 @@
 @import "wrapper";
 @import "main-navigation";
 @import "sidebar";
+@import "image";
 @import "buttons";
 @import "breadcrumb";
 @import "content-type-icon";
