--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/full/full.less
@@ -108,7 +108,23 @@
 
 // Print
 @media print {
+  .inner-wrapper {
+    left: 0 !important;
+    position: static !important;
+  }
+  .sidebar-left {
+    width: 0;
+  }
+  .col-sm-8 {
+    left: 0;
+    float: none;
+    width: 80%;
+  }
 
+  .popover-button-toggle {
+    display: none;
+    visibility: hidden;
+  }
 	// Full node
 	.os2-node-full {}
 }
