Prevent user teaser email from breaking layout

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/user/teaser/teaser.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/user/teaser/teaser.less
@@ -33,6 +33,14 @@
 					font-weight: @font-weight-bold;
 				}
 			}
+
+			.os2-user-teaser-email {
+
+				a {
+					word-wrap: break-word;
+					word-break: break-all;
+				}
+			}
 		}
 	}
 }
